# stormcell

./: .gitignore  README.md  justfile
crates/_/: Cargo.toml
crates/_/examples/: clouds_2d.rs  game_of_life_2d.rs  heat_diffusion_2d.rs
crates/_/src/: allocator.rs  changes.rs  grid.rs  lib.rs  pipeline.rs  topology.rs
crates/_/src/quantizer/: kernel.rs  mod.rs  neighbors.rs
