[package]
name = "stormcell"
version = "0.1.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Hierarchical grid processing for simulations"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/stormcell"
repository = "https://github.com/PsichiX/stormcell"
documentation = "https://docs.rs/stormcell"
readme = "../../README.md"

[dependencies]
